--- a/src/common.scss
+++ b/src/common.scss
@@ -109,6 +109,8 @@ input[type="number"] {
   --z-index-overay-1: 100;
   --z-index-overay-2: 200;
   --z-index-overay-3: 300;
+
+  --view-max-width: 124rem;
 }
 #app {
   min-height: 100dvh;
